--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.5",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
