--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "swiper": "^11.2.5",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
